# syslog-ng

./: .travis.yml  CMakeLists.txt  Makefile.am  NEWS.md  README.md  VERSION  configure.ac  vscode-snippet-generator.py
.github/PULL_REQUEST_TEMPLATE/: 00-general.md  10-news-highlight.md  20-feature.md  30-bugfix.md  40-internal-change.md  pull_request_template.md
.github/workflows/: actions.dockerfile  alltilla.dockerfile  asd  check-cfg-grammar-changes.yml  comment-cfg-diff.yml  comment-cfg-grammar-changes.yml  comment-on-version-bump-pr.yml  create-and-upload-packages.yml  create-draft-release  create-draft-release.yml  create-packages.yml  create-release-candidate-pr.yml  dbld-images.yml  dbld.yml  devshell.yml  draft-release.yml  index-packages.yml  macos.yml  nightly-packages.yml  package-indexer-checks.yml  packages.yml  prepare-release.yml  publish-docker-image.yml  push-annotated-release-tag.yml  stable-release.yml  test-apt-packages.yml  test.yml  trigger-index-packages.yml  trigger-publish-docker-image.yml  trigger-tests-on-nightly-packages.yml  trigger-tests-on-stable-packages.yml  upload-packages.yml  version-bump.yml
cmake/Modules/: ExternalIVYKIS.cmake  ExternalJSONC.cmake
config-option-database/: ConfigGraph.py  config-option-database.py  config_helper.py  micek_test.py  yacc2graph.py
config-option-database/plugins/: micek_test.py  micek_test2.py
config-option-database/test/: test_yacc2graph.py
config-option-database/utils/: BisonGraph.py  ConfigGraph.py  ConfigOptions.py  MergeYm.py  OptionParser.py  SyntaxGraph.py  Yacc2Graph.py  options.py
contrib/: Brewfile  Makefile.am
contrib/config_option_database/: Makefile.am  config_database.py  pyproject.toml  requirements.txt  syslog-ng-cfg-db.py  test.py
contrib/config_option_database/driver_db/: block.py  driver.py  driver_db.py  option.py  utils.py
contrib/config_option_database/module_loader/: load_modules.py  parse_sentence.py
contrib/config_option_database/tests/driver_db/: test_block.py  test_driver.py  test_driver_db.py  test_option.py
contrib/config_option_database/tests/module_loader/: test_parse_sentence.py
contrib/config_option_database/utils/: BisonGraph.py  ConfigOptions.py  OptionParser.py  SclOptionParser.py  Yacc2Graph.py  YaccParser.py
contrib/config_option_database/utils/test/: test_BisonGraph.py  test_OptionParser.py  test_SclOptionParser.py  test_Yacc2Graph.py  test_YaccParser.py
contrib/openbsd-packaging/: syslog-ng.conf
dbld/: build.manifest  builddeps  rules
doc/: doc-3306.md
doc/man/: dqtool.1.xml  loggen.1.xml  pdbtool.1.xml  persist-tool.1.xml  secure-logging.7.xml  slogencrypt.1.xml  slogkey.1.xml  slogverify.1.xml  syslog-ng-ctl.1.xml  syslog-ng-debun.1.xml  syslog-ng.8.xml  syslog-ng.conf.5.xml
docker/: syslog-ng.conf
lib/: CMakeLists.txt  Makefile.am  afinter.c  atomic-gssize.h  cfg-block.c  cfg-block.h  cfg-grammar.y  cfg-lexer.c  cfg-lexer.h  cfg-parser.c  cfg.c  driver.c  logpipe.c  logpipe.h  logreader.c  logreader.h  logthrdestdrv.c  logwriter.c  logwriter.h  merge-grammar.py  msg-stats.c  pragma-grammar.ym  pragma-parser.c  scratch-buffers.c  signal-handler.c  str-format.c  str-matcher.c  str-matcher.h  syslog-ng.h  versioning.h
lib/exponential-backoff/: exponential-backoff.c
lib/filter/: filter-call.c  filter-cmp.c  filter-pipe.c
lib/filterx/: CMakeLists.txt  Makefile.am  expr-dict.c  expr-function.c  expr-list.c  (+7 more)
lib/logthrdest/: CMakeLists.txt  Makefile.am  exponential-backoff.c  exponential-backoff.h  logthrdestdrv.c  logthrdestdrv.h
modules/mqtt/: CMakeLists.txt  Makefile.am  mqtt-plugins.c
modules/mqtt/destination/: CMakeLists.txt  Makefile.am  mqtt-callback.c  mqtt-callback.h  mqtt-destination.c  mqtt-destination.h  mqtt-grammar.ym  mqtt-parser.c  mqtt-parser.h  mqtt-plugin.c  mqtt-worker.c  mqtt-worker.h
news/: bugfix-3056.md  bugfix-3141.md  bugfix-3144.md  bugfix-3726.md  developer-note-3038.md  feature-3051.md  feature-4354.md  feature-4365.md  feature-4663.md  other-2979.md
scl/: syslog-ng.conf
(+282 files in other folders)
